# mif27-synthese-d-images

./: .gitignore  CMakeLists.txt  README.md  clean.sh  debug.sh  release.sh
include/: Camera.hpp
lib/gkit/: buffers.cpp  buffers.h  color.cpp  color.h  default_program.cpp  default_program.h  draw.cpp  draw.h  files.h  image_io.cpp  image_io.h  mesh_io.cpp  program.cpp  program.h  texture.cpp  texture.h  vec.cpp  vec.h
src/: Camera.cpp  main.cpp
